examples/test/testpolicy9138.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9138
  namespace: namespace406
spec:
  podSelector:
    matchLabels:
      key17: value1
      key10: value9
      key33: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value19
          key47: value39
          key39: value34
      podSelector:
        matchLabels:
          key40: value21
          key2: value32
